Review Request 5159 - better messaging for errors (split empty from over max length) - no longer include (copy) text if it makes length of model name too long - not actually checking in changes to ServiceErrorModule

--- a/le-ui/projects/common/assets/sass/_forms.scss
+++ b/le-ui/projects/common/assets/sass/_forms.scss
@@ -1255,6 +1255,13 @@ select[multiple].input-lg {
   margin-bottom: 10px;
   color: #737373;
 }
+ul.help-block {
+  list-style-type:  disc;
+  list-style-position: inside;
+}
+ul.help-block > li > em {
+  color: #b50b20;
+}
 .has-error .help-block {
   display: block;
 }
